# indico-sso-group-mapping

./: .header.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  hatch_build.py  headers.yml  howto_release.md  manage-i18n.sh  package.json  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
indico_sso_group_mapping/: __init.py__  __init__.py  plugin.py  pytest.ini  task.py
tests/: plugin_test.py
