# SPDX-License-Identifier: MIT

[project]
name = 'indico-sso-group-mapping'
description = 'SSO group mapping plugin for Indico'
readme = 'README.md'
version = '1.0.3'
license = 'MIT'
authors = [{ name = 'University of Bonn' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = ['indico>=3.3']

[project.urls]
GitHub = 'https://github.com/unibonn/indico-sso-group-mapping'

[project.entry-points.'indico.plugins']
sso_group_mapping = 'indico_sso_group_mapping.plugin:SSOGroupMappingPlugin'

[build-system]
requires = ['hatchling==1.25.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['indico_sso_group_mapping']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = 'hatch_build.py'
dependencies = ['babel==2.16.0']
