# SPDX-License-Identifier: MIT

[metadata]
name = indico-sso-group-mapping
version = 0.4
description = SSO group mapping plugin for Indico
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/unibonn/indico-sso-group-mapping
license = MIT
author = University of Bonn
#author_email = @uni-bonn.de
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.0

[options.entry_points]
indico.plugins =
    sso_group_mapping = indico_sso_group_mapping.plugin:SSOGroupMappingPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
